Fixed wrong margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -653,8 +653,8 @@ body {
 }
 
 .work-item-title {
-    margin-left: 24px;
-    margin-bottom: 20px;
+    padding-left: 24px;
+    padding-bottom: 20px;
 }
 
 .work-list .item .image {
